@@ -15,6 +15,10 @@ Convert obdgpslogger(1) logs to csv files
 Output to this .csv file
 .IP "-d|--db <database>"
 Work from logs stored in this database file
+.IP "-s|--start <time>"
+Only dump rows more recent than this
+.IP "-e|--end <time>"
+Only dump rows older than this
 .IP "-v|--version"
 Print out version number and exit.
 .IP "-h|--help"
